--- a/Landing_Page.css
+++ b/Landing_Page.css
@@ -1,44 +1,38 @@
-body{
+body {
   margin: 0;
 }
 
-.content{
-  width: 80vw;
+.content {
+  /* width: 80vw; */
   margin: auto;
   margin-bottom: 60px;
 }
-.ct-header{
-  display:flex;
+
+.ct-header {
+  display: flex;
   background-image: linear-gradient(rgb(137, 137, 251), skyblue);
+  width: 1200px;
   height: 400px;
   position: relative;
 }
 
-.phone-img{
+.phone-img {
   position: absolute;
   /* width: 300px; */
   top: calc(100% - 300px);
-  right: 50px;
+  right: 10%;
   /* left: 100%; */
   height: 300px;
 }
 
-.ct-header > div:first-child{
+.ct-header>div:first-child {
   padding: 50px;
   width: 600px;
   margin-left: 80px;
   color: white;
 }
-/* .ct-header > :last-child{
-  padding-top: 20px;
-} */
-/* .ct-header img{
-  width: auto;
-  padding-top: 90px;
-  padding-left: 50px;
-  max-width: 1000px;
-} */
-.bnt{
+
+.bnt {
   font-size: medium;
   color: white;
   padding: 10px 30px;
@@ -47,30 +41,30 @@ body{
   border-radius: 7px;
 }
 
-.ct-text{
+.ct-text {
   text-align: center;
   padding-top: 20px;
 }
 
-.text{
+.text {
   padding-top: 20px;
   text-align: center;
   color: white;
 }
 
-.ct-service{
+.ct-service {
   background-color: skyblue;
   height: 300px;
 }
 
-.servive-icon{
+.servive-icon {
   display: flex;
   justify-content: space-evenly;
   padding: 20px;
   text-align: center;
 }
 
-.icon{
+.icon {
   width: 50px;
   height: 50px;
   padding-top: 15px;
@@ -79,10 +73,12 @@ body{
   border-radius: 50%;
   box-sizing: border-box;
 }
-.ct-portfolio{
+
+.ct-portfolio {
   height: 1000px;
 }
-.img-container{
+
+.img-container {
   background-color: grey;
   color: white;
   width: 90%;
@@ -90,68 +86,140 @@ body{
   display: flex;
   flex-wrap: wrap;
   margin: auto;
+  position: relative;
 }
 
-.port-img1{
+.overlay1:hover .transition {
+  border: 40px solid white;
+  transition: all 1s;
+}
+
+.overlay2:hover .transition {
+  border: 40px solid white;
+  transition: all 1s;
+}
+
+.overlay3:hover .transition {
+  border: 40px solid white;
+  transition: all 1s;
+}
+
+.overlay4:hover .transition {
+  border: 40px solid white;
+  transition: all 1s;
+}
+
+.transition {
+  position: absolute;
+  /* border: 40px solid white; */
+  width: 75%;
+  height: 70%;
+  margin: auto;
+}
+
+.overlay1 {
+  position: absolute;
+  width: 50%;
+  height: 50%;
+}
+
+.overlay2 {
+  position: absolute;
+  right: 0;
+  width: 50%;
+  height: 50%;
+}
+
+.overlay3 {
+  position: absolute;
+  bottom: 0;
+  width: 50%;
+  height: 50%;
+}
+
+.overlay4 {
+  position: absolute;
+  width: 50%;
+  height: 50%;
+  right: 0;
+  bottom: 0;
+}
+
+.port {
+  background-size: cover;
+  height: 100%;
+}
+
+.port-img1 {
   background-image: url('../img/portfolio-1.jpg');
-  opacity: 0.7;
-  width: 50%;
-}
-.port-img2{
-  background-image: url('../img/portfolio-2.jpg');
-  width: 50%;
-}
-.port-img3{
-  background-image: url('../img/portfolio-3.jpg');
-  width: 50%;
-  
-}
-.port-img4{
-  background-image: url('../img/portfolio-4.jpg');
-  width: 50%;
 }
 
-.port-text{
+.port-img2 {
+  background-image: url('../img/portfolio-2.jpg');
+}
+
+.port-img3 {
+  background-image: url('../img/portfolio-3.jpg');
+}
+
+.port-img4 {
+  background-image: url('../img/portfolio-4.jpg');
+}
+
+.port-text {
   padding: 50px;
 }
-.logo-link{
+
+.logo-link {
   text-align: center;
 }
 
-.bnt:hover{
+.bnt:hover {
   background-color: grey;
 }
 
-.icon:hover{
+.icon:hover {
   font-size: x-large;
 }
 
-@media screen and (max-width : 768px){
-  .content{
+@media screen and (max-width : 770px) {
+  .content {
     width: 100%;
   }
-  p{
+
+  p {
     font-size: 12px;
   }
-  .ct-header{
+
+  .ct-header {
     height: 600px;
     text-align: center;
   }
-  .ct-header > div{
+
+  .ct-header>div {
     margin: 0;
   }
-  .phone-img{
+
+  .ct-header>div:first-child {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .phone-img {
     margin: auto;
     left: 0;
     right: 0;
   }
-  .ct-service{
+
+  .ct-service {
     height: 400px;
   }
-  .ct-portfolio{
+
+  .ct-portfolio {
     height: 500px;
   }
-  .img-container{
+
+  /* .img-container {
     height: auto;
-  }
+  } */
 }
